kube/kustomize/overlays/dev/harness-patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <+pipeline.stages.DeployDEV.variables.app_label>
spec:
  selector:
    matchLabels:
      app: <+pipeline.stages.DeployDEV.variables.app_label>
  replicas: 2
  template:
    spec:
      containers:
        - name: <+pipeline.stages.DeployDEV.variables.app_label>
          image: <+artifact.image>
