kube/kustomize/overlays/dev/harness-patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <+pipeline.stages.DeployDEV.variables.app_label>
  labels:
    app: <+pipeline.stages.DeployDEV.variables.app_label>
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: <+pipeline.stages.DeployDEV.variables.app_label>
